:bug: (fix) : correct css bug > animation-delay:none & white-space: wrap

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ p {
   font-size: 16px;
   font-weight: 300;
   letter-spacing: -0.5px;
-  white-space: wrap;
+  white-space: no-wrap;
   text-overflow: ellipsis;
 }
 
@@ -129,7 +129,7 @@ span.new {
 }
 
 .loader__circle {
-  animation-delay: none;
+  animation-delay: 0s;
   animation-duration: 2.56s;
   animation-iteration-count: 1;
   animation-name: loader;
@@ -204,7 +204,7 @@ span.new {
 }
 
 main {
-  animation-delay: none;
+  animation-delay: 0s;
   animation-duration: 8s;
   animation-iteration-count: 1;
   animation-name: main;
@@ -228,7 +228,7 @@ main {
 }
 
 .favourite:hover .favourite--normal, .favourite:active .favourite--normal {
-  animation-delay: none;
+  animation-delay: 0s;
   animation-duration: 2s;
   animation-iteration-count: 1;
   animation-name: favourite-normal;
@@ -237,7 +237,7 @@ main {
 
 .favourite:hover .favourite--hover, .favourite:active .favourite--hover {
   display: inherit;
-  animation-delay: none;
+  animation-delay: 0s;
   animation-duration: 2s;
   animation-iteration-count: 1;
   animation-name: favourite-hover;
@@ -263,7 +263,7 @@ main {
 }
 
 .dish {
-  animation-delay: none;
+  animation-delay: 0s;
   animation-duration: 1.50s;
   animation-iteration-count: 1;
   animation-name: menu;
