--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,7 +62,7 @@ p {
     font-size: 16px;
     font-weight: 300;
     letter-spacing: -0.5px;
-    white-space: wrap;
+    white-space: no-wrap;
     text-overflow: ellipsis;
 }
 
